# PyUtau-contiuned

./: .gitignore  CMakeLists.txt  CPP_UTAU_底层实现计划.md  README.md  demo.ust
.github/workflows/: expathed  main.yml  release.yml
examples/: minimal.ust
include/: oto_parser.hpp  synth_engine.hpp  ust_parser.hpp  utau_types.hpp
include/utau/engine/: encoding.hpp  oto.hpp  synthesis.hpp  types.hpp  ust.hpp  voicebank.hpp  wav_writer.hpp
src/: core.cpp  core.hpp  main.cpp  oto_parser.cpp  synth_engine.cpp  ust_parser.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Project.cpp  Project.h  Resampler.cpp  Resampler.h  UstParser.cpp  UstParser.h  Voicebank.cpp  Voicebank.h
src/engine/: encoding.cpp  oto.cpp  synthesis.cpp  ust.cpp  voicebank.cpp  wav_writer.cpp
src/gui/: MainWindow.cpp  MainWindow.h  PianoRollWidget.cpp  PianoRollWidget.h
tests/: comment_and_pau.ust  rest_note.ust  verify_wav.py
